--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.3.14",
-    "nodemon": "^1.18.7"
+    "nodemon": "^1.18.7",
+    "path": "^0.12.7"
   }
 }
